优化勋章分组按钮布局，支持自动换行和自适应长度

--- a/商品分类标准.md
+++ b/商品分类标准.md
@@ -1,84 +1,73 @@
-# 商品分类标准
+# 人生游戏管理系统 - 商品分类标准文档
 
-## 1. 分类定义
+## 一、分类体系概述
 
-### 1.1 数码类
-- **定义**：特指电子数码产品及其配件
-- **包含范围**：
-  - 智能手机、平板电脑、笔记本电脑等移动设备
-  - 耳机、音箱、摄像头等数码配件
-  - 键盘、鼠标等电脑外设
-  - 智能手表、智能手环等可穿戴设备（除鞋类）
-  - 摄影摄像设备
-- **排除范围**：
-  - 穿戴于人体的服饰鞋履类商品
-  - 家用大型电器
-  - 家居生活用品
+为了更好地管理和展示商品，我们建立了清晰的商品分类体系，将所有商品分为以下核心类别：
 
-### 1.2 家居类
-- **定义**：家庭生活中使用的各类用品
-- **包含范围**：
-  - 家具（沙发、床、桌子等）
-  - 家用电器（扫地机器人、洗衣机、冰箱等）
-  - 厨房用品（锅碗瓢盆、厨房电器等）
-  - 床上用品（枕头、被子等）
-  - 人体工学相关产品（人体工学椅、人体工学鼠标垫等）
-  - 家居装饰品
-- **排除范围**：
-  - 穿戴于人体的服饰鞋履类商品
-  - 纯电子数码产品
+| 分类名称 | 包含范围 | 定义 |
+|---------|---------|------|
+| 吃喝 | 食品、饮料、餐饮服务等 | 用于满足基本生理需求的食品和饮料，以及相关餐饮服务 |
+| 形象设计与穿搭 | 服装、鞋子、配饰、美容美发等 | 用于提升个人形象和穿着的商品及服务 |
+| 体验 | 各类体验活动、课程、培训等 | 提供特定体验或知识学习的商品及服务 |
+| 休闲娱乐 | 游戏、影视、音乐、旅游、运动等 | 用于休闲娱乐、放松身心的商品及服务 |
+| 数码家居 | 数码产品、家居用品等 | 数码设备和家居生活相关商品 |
+| 数码 | 电子设备、数码配件等 | 各类电子数码产品及配件 |
+| 家居 | 家具、家电、家居装饰等 | 用于家居生活的各类用品和设备 |
+| 会员/权益/充值 | 各类会员、权益、充值服务等 | 提供特定权益或充值服务的商品 |
+| 服务 | 各类服务类商品 | 除上述分类外的其他服务类商品 |
+| 其他 | 无法归类到上述分类的商品 | 不属于上述任何分类的商品 |
 
-### 1.3 个人穿搭类（服装类）
-- **定义**：穿戴于人体的服饰鞋履类商品
-- **包含范围**：
-  - 衣服、裤子、裙子等服装
-  - 鞋子、袜子等鞋履
-  - 帽子、围巾、手套等配饰
-  - 手表、项链、耳环等饰品
-- **排除范围**：
-  - 电子数码产品
-  - 家居生活用品
+## 二、分类判定标准
 
-### 1.4 其他分类
-- **饮食类**：各类食品、饮料
-- **娱乐类**：娱乐活动、游戏、休闲体验
-- **服务类**：各类服务（理发、按摩、学习课程等）
-- **票务类**：各类门票、车票、机票
-- **会员类**：各类会员服务
-- **充值类**：话费充值、云存储等充值服务
-- **房产类**：房屋、公寓等不动产
-- **车辆类**：汽车、摩托车等交通工具
-- **运动类**：运动器材、运动服装（归属于服装类）
-- **礼品类**：各类礼品
-- **其他类**：无法归类到以上分类的商品
+### 1. 数码类判定标准
+- 电子设备：手机、电脑、平板、相机、耳机等
+- 数码配件：充电器、数据线、保护套等
+- 智能设备：智能手表、智能音箱、智能家居设备等
 
-## 2. 分类流程
+### 2. 家居类判定标准
+- 家具：桌椅、沙发、床等
+- 家电：冰箱、洗衣机、空调等
+- 家居装饰：灯具、摆件、窗帘等
+- 家居用品：清洁用品、厨房用品、浴室用品等
+- 人体工学产品：人体工学椅、乳胶枕头等
 
-1. **判断是否为电子数码产品**：如果是，归为数码类
-2. **判断是否为穿戴于人体的服饰鞋履类商品**：如果是，归为服装类
-3. **判断是否为家庭生活中使用的用品**：如果是，归为家居类
-4. **其他情况**：根据商品属性归为其他相应分类
+### 3. 个人穿搭类判定标准
+- 服装：上衣、裤子、裙子、外套等
+- 鞋子：各种类型的鞋子
+- 配饰：帽子、围巾、眼镜、首饰等
+- 美容美发：理发、美容、美甲等服务
 
-## 3. 分类示例
+## 三、商品归类示例
 
-| 商品名称 | 正确分类 | 错误分类 | 原因 |
-|---------|---------|---------|------|
-| 智能手机 | 数码类 | 家居类 | 属于电子数码产品 |
-| 人体工学椅 | 家居类 | 数码类 | 属于家庭生活中使用的人体工学产品 |
-| 鞋子 | 服装类 | 数码类 | 属于穿戴于人体的鞋履类商品 |
-| 扫地机器人 | 家居类 | 数码类 | 属于家庭生活中使用的电器 |
-| 防蓝光眼镜 | 数码类 | 服装类 | 属于数码配件 |
-| 乳胶枕头 | 家居类 | 服装类 | 属于家庭床上用品 |
+| 商品名称 | 原分类 | 新分类 | 归类理由 |
+|---------|-------|-------|---------|
+| iPhone 16 Pro | 数码产品 | 数码 | 属于电子设备，归类为数码类 |
+| 人体工学椅 | 装备 | 家居 | 属于人体工学产品，归类为家居类 |
+| 新战靴 (鞋子) | 装备 | 形象设计与穿搭 | 属于鞋子，归类为个人穿搭类 |
+| 烧烤套餐 | 饮食 | 吃喝 | 属于餐饮服务，归类为吃喝类 |
+| 电影票 | 票务 | 休闲娱乐 | 属于娱乐活动，归类为休闲娱乐类 |
+| 网易云 VIP | 会员 | 会员/权益/充值 | 属于会员服务，归类为会员/权益/充值类 |
+| 房子一间 | 房产 | 家居 | 属于房产，归类为家居类 |
+| 理想汽车 | 车辆 | 家居 | 属于车辆，归类为家居类 |
+| 衣服一件 | 服装 | 形象设计与穿搭 | 属于服装，归类为个人穿搭类 |
 
-## 4. 分类管理
+## 四、分类管理流程
 
-1. 新增商品时，需按照本标准进行分类
-2. 定期检查现有商品分类，确保符合本标准
-3. 如有分类争议，需由产品团队讨论决定
-4. 本标准将根据业务发展情况定期更新
+1. 新增商品时，根据商品的实际属性和用途，参照上述分类判定标准进行归类
+2. 定期检查商品分类，确保所有商品归类准确
+3. 如有新的商品类型出现，根据其属性添加到相应分类或考虑新增分类
+4. 如需调整分类体系，需经过产品团队讨论并更新本标准文档
 
-## 5. 更新记录
+## 五、分类变更记录
 
-| 日期 | 版本 | 更新内容 | 更新人 |
-|------|------|----------|--------|
-| 2025-12-31 | V1.0 | 初始版本 | 系统自动生成 |
+| 变更日期 | 变更内容 | 变更原因 |
+|---------|---------|---------|
+| 2026-01-01 | 建立初始分类体系 | 优化商品管理和展示 |
+| 2026-01-01 | 合并多个分类 | 简化分类体系，提高用户体验 |
+| 2026-01-01 | 新增会员/权益/充值分类 | 满足新的商品类型需求 |
+
+## 六、附则
+
+1. 本标准自发布之日起生效
+2. 本标准由产品团队负责解释和更新
+3. 如有疑问，可咨询产品团队进行分类确认
