优化设置中心卡片布局与自适应效果，实现代码推送分发与部署功能

--- a/商品分类标准.md
+++ b/商品分类标准.md
@@ -66,7 +66,120 @@
 | 2026-01-01 | 合并多个分类 | 简化分类体系，提高用户体验 |
 | 2026-01-01 | 新增会员/权益/充值分类 | 满足新的商品类型需求 |
 
-## 六、附则
+## 六、商品分类清单
+
+### 6.1 数码类商品
+
+| 商品名称 | 价格（元） |
+|---------|------------|
+| iPhone 16 Pro | 8999 |
+| MacBook Pro M4 | 16000 |
+| 降噪耳机 | 2000 |
+| 机械键盘 | 800 |
+| 大疆pocket 3 | 2590 |
+| AirPods | 189 |
+| MacBook Pro | 6499 |
+| iPad | 3299 |
+| 扫地机器人 | 7200 |
+| 戴森吹风机 | 1999 |
+| 智能台灯 | 350 |
+| 智能手表 | 1299 |
+
+### 6.2 家居类商品
+
+| 商品名称 | 价格（元） |
+|---------|------------|
+| 人体工学椅 | 1500 |
+| 乳胶枕头 | 300 |
+| 365天日历 | 9.9 |
+| 咖啡机 | 899 |
+| 瑜伽垫 | 89 |
+| 宠物食品 | 159 |
+| 室内炉锅桌子 | 1299 |
+| 厨房套装 | 3500 |
+| 房子一间 | 500000 |
+| 理想汽车 | 250000 |
+
+### 6.3 形象设计与穿搭类商品
+
+| 商品名称 | 价格（元） |
+|---------|------------|
+| 新战靴 (鞋子) | 800 |
+| 防蓝光眼镜 | 400 |
+| 定制T恤 | 129 |
+| 素颜霜 | 100 |
+| 夹板 | 30 |
+| 头发烫染 | 100 |
+
+### 6.4 吃喝类商品
+
+| 商品名称 | 价格（元） |
+|---------|------------|
+| 辣条一包 | 1 |
+| 快乐水 | 5 |
+| 疯狂星期四 | 68 |
+| 买一瓶饮料 | 5 |
+| 烤全羊 | 800 |
+| 烧烤 | 60 |
+| 烤鱼 | 100 |
+| 烤鸭 | 30 |
+| 奶茶 | 10 |
+| 正新鸡排 | 13 |
+| 香辣大鸡腿 | 1.99 |
+| 酱骨头套餐 | 158 |
+| 烧烤套餐（自制） | 88 |
+| 烧烤套餐（外买） | 158 |
+| 烤鱼（外买） | 188 |
+| 烤鱼（自制） | 55 |
+| 一桶泡面 | 5 |
+
+### 6.5 休闲娱乐类商品
+
+| 商品名称 | 价格（元） |
+|---------|------------|
+| 看小说半小时 | 30 |
+| 刷短视频半小时 | 30 |
+| 看小说一小时 | 60 |
+| 刷短视频一小时 | 60 |
+| 理发 | 48 |
+| 按摩放松 | 198 |
+| 书籍购买 | 98 |
+| 旅游车票 x1 | 298 |
+| 电影票 | 45 |
+| 演唱会门票 | 498 |
+| 约人爬山 | 9.9 |
+| 演唱会周边 | 199 |
+| 说走就走的短途旅行 | 1100 |
+| 说走就走的长途旅行 | 5000 |
+| 说走就走的国际旅行 | 50000 |
+| 按摩 | 200 |
+| 兴趣组队门票 | 50 |
+
+### 6.6 会员充值类商品
+
+| 商品名称 | 价格（元） |
+|---------|------------|
+| 网易云 VIP (月) | 15 |
+| 健身会员 (月) | 298 |
+| 网课论坛会员 | 99 |
+| 小众社群 | 99 |
+| 知识星球会员 | 199 |
+| 行业交流群 | 299 |
+| 兴趣爱好社群 | 88 |
+| 专业论坛会员 | 159 |
+| 线下活动社群 | 399 |
+| 话费充值卡 | 99 |
+| 话费充值卡50元 | 50 |
+| 云存储空间 | 118 |
+| 电影会员年卡 | 199 |
+| 在线课程 | 399 |
+| 社群门票(1000元) | 1000 |
+| 社群门票(3000元) | 3000 |
+| 社群门票(5000元) | 5000 |
+| 社群门票(10000元) | 10000 |
+| 社群门票(20000元) | 20000 |
+
+## 七、附则
 
 1. 本标准自发布之日起生效
 2. 本标准由产品团队负责解释和更新
