--- a/帮助按钮设计指南.md
+++ b/帮助按钮设计指南.md
@@ -1,250 +1,76 @@
 # 帮助按钮设计指南
 
-## 1. 设计原则和目标
+## 1. 设计原则
 
-### 1.1 核心原则
-- **一致性**：所有帮助按钮保持统一的视觉设计和交互行为
-- **可发现性**：帮助按钮应易于识别和访问
-- **非侵入性**：帮助功能不应干扰主要用户流程
-- **清晰性**：帮助内容应简洁明了，易于理解
-- **可定制性**：支持不同主题和配置
+- **一致性**：全系统所有帮助按钮保持统一的样式和交互方式
+- **易用性**：帮助按钮位置明显，点击后快速显示帮助内容
+- **简洁性**：帮助内容结构清晰，语言简洁明了
+- **可维护性**：建立统一的帮助组件管理机制，便于维护和扩展
 
-### 1.2 设计目标
-- 提供统一的帮助体验，让用户在任何模块都能快速获取帮助
-- 降低用户学习成本，提高产品易用性
-- 增强用户对产品功能的理解和信任
-- 支持多种主题和配置，适应不同用户需求
+## 2. 帮助按钮样式规范
 
-## 2. 视觉设计规范
+### 2.1 基本样式
+- **图标**：使用16px大小的`HelpCircle`图标
+- **颜色**：默认颜色为`text-zinc-500`，hover时变为`text-white`
+- **过渡效果**：添加`transition-colors`过渡效果
+- **背景**：悬停时添加轻微的背景高亮效果
 
-### 2.1 帮助按钮设计
-
-#### 2.1.1 基本样式
-- **图标**：使用 `HelpCircle` 图标（来自 lucide-react 库）
-- **尺寸**：默认 16px，小尺寸 10px-12px，大尺寸 20px-24px
-- **颜色**：
-  - 默认状态：`text-zinc-500`
-  - 悬停状态：`text-white` 或主题主色调
-  - 背景：透明，悬停时显示轻微背景色
-- **形状**：圆形或圆角矩形
-- **交互反馈**：悬停时轻微放大（scale 1.1）和背景色变化
-
-#### 2.1.2 主题适配
-- **深色主题**：图标颜色较浅，悬停背景色较深
-- **浅色主题**：图标颜色较深，悬停背景色较浅
-- **拟态主题**：使用拟态阴影效果，悬停时显示轻微背景色
-
-### 2.2 指南卡片设计
-
-#### 2.2.1 基本结构
-- **背景**：半透明深色背景，支持主题配置
-- **卡片样式**：
-  - 圆角：支持小、中、大三种尺寸
-  - 阴影：支持轻、中、强三种强度
-  - 边框：与主题匹配的边框颜色
-- **内容布局**：
-  - 标题栏：包含图标、标题和更新时间
-  - 关闭按钮：位于右上角
-  - 内容区域：分模块展示帮助内容
-
-#### 2.2.2 内容模块
-- **产品介绍**：模块的基本介绍和功能定位
-- **底层原理**：模块设计的理论基础（可选）
-- **核心规则**：模块的核心使用规则和限制
-- **使用方法**：详细的操作指南和使用场景
-
-## 3. 交互行为规范
-
-### 3.1 帮助按钮交互
-- **点击行为**：点击帮助按钮显示对应的指南卡片
-- **悬停效果**：
-  - 图标颜色变化
-  - 轻微放大效果（scale 1.1）
-  - 背景色变化
-- **焦点状态**：清晰的焦点样式，支持键盘导航
-
-### 3.2 指南卡片交互
-- **显示动画**：淡入效果，从中心弹出
-- **关闭方式**：
-  - 点击关闭按钮
-  - 点击卡片外部区域
-  - 按下 ESC 键
-- **内容滚动**：长内容支持垂直滚动
-
-## 4. 代码实现指南
-
-### 4.1 组件架构
-
-#### 4.1.1 HelpTooltip 组件
-- **位置**：`components/HelpSystem/HelpTooltip.tsx`
-- **功能**：统一的帮助按钮封装
-- **props**：
-  - `helpId`：帮助内容的唯一标识符
-  - `onHelpClick`：点击事件处理函数
-  - `children`：自定义图标（可选）
-  - `className`：自定义样式类（可选）
-
-#### 4.1.2 HelpContent 组件
-- **位置**：`components/HelpSystem/HelpContent.tsx`
-- **功能**：帮助内容数据管理
-- **格式**：包含标题、图标、产品介绍、底层原理、核心规则、使用方法和更新时间
-
-#### 4.1.3 GlobalGuideCard 组件
-- **位置**：`components/HelpSystem/HelpModal.tsx`
-- **功能**：统一的指南卡片封装
-- **props**：
-  - `activeHelp`：当前激活的帮助ID
-  - `helpContent`：帮助内容数据
-  - `onClose`：关闭事件处理函数
-  - `cardBg`：卡片背景样式
-  - `textMain`：主文本样式
-  - `textSub`：辅助文本样式
-  - `config`：指南卡片配置
-
-### 4.2 使用示例
-
-#### 4.2.1 基本用法
+### 2.2 示例代码
 ```tsx
-import { HelpTooltip } from './HelpSystem';
-
-// 在组件中使用
-<HelpTooltip helpId="checkin" onHelpClick={setActiveHelp}>
-  <HelpCircle size={16} className="text-zinc-500 hover:text-white" />
-</HelpTooltip>
-```
-
-#### 4.2.2 完整示例
-```tsx
-import React, { useState } from 'react';
 import { HelpCircle } from 'lucide-react';
+
+// 标准帮助按钮
+<button onClick={() => onHelpClick('helpId')} className="transition-colors">
+  <HelpCircle size={16} className="text-zinc-500 hover:text-white transition-colors" />
+</button>
+
+// 使用统一的HelpTooltip组件
+<HelpTooltip helpId="helpId" onHelpClick={onHelpClick} />
+```
+
+## 3. 帮助系统组件结构
+
+### 3.1 核心组件
+- **HelpTooltip**：帮助按钮组件，负责显示帮助图标和处理点击事件
+- **GlobalGuideCard**：帮助内容卡片组件，负责显示帮助内容
+- **helpContent**：帮助内容数据，存储所有模块的帮助信息
+
+### 3.2 组件关系
+```
+┌─────────────────────────────────────────────────────────────┐
+│                     帮助系统组件                          │
+├───────────┬────────────────────────────────────────────────┤
+│  HelpTooltip │  帮助按钮，点击后触发帮助卡片显示             │
+├───────────┼────────────────────────────────────────────────┤
+│ GlobalGuideCard │  帮助内容卡片，显示详细的帮助信息          │
+├───────────┼────────────────────────────────────────────────┤
+│  helpContent    │  帮助内容数据，存储所有模块的帮助信息      │
+└───────────┴────────────────────────────────────────────────┘
+```
+
+## 4. 帮助系统使用方法
+
+### 4.1 在组件中添加帮助按钮
+
+1. 导入帮助系统组件
+```tsx
 import { HelpTooltip, GlobalGuideCard, helpContent } from './HelpSystem';
-
-const MyComponent: React.FC = () => {
-  const [activeHelp, setActiveHelp] = useState<string | null>(null);
-  const cardBg = 'bg-zinc-900 border-zinc-800';
-  const textMain = 'text-white';
-  const textSub = 'text-zinc-400';
-
-  return (
-    <div>
-      {/* 帮助按钮 */}
-      <HelpTooltip helpId="myFeature" onHelpClick={setActiveHelp}>
-        <HelpCircle size={16} className="text-zinc-500 hover:text-white" />
-      </HelpTooltip>
-
-      {/* 指南卡片 */}
-      <GlobalGuideCard
-        activeHelp={activeHelp}
-        helpContent={helpContent}
-        onClose={() => setActiveHelp(null)}
-        cardBg={cardBg}
-        textMain={textMain}
-        textSub={textSub}
-        config={{
-          fontSize: 'medium',
-          borderRadius: 'medium',
-          shadowIntensity: 'medium',
-          showUnderlyingPrinciple: true
-        }}
-      />
-    </div>
-  );
-};
 ```
 
-### 4.3 配置选项
-
-#### 4.3.1 指南卡片配置
-```typescript
-interface GuideCardConfig {
-  fontSize: 'small' | 'medium' | 'large'; // 字体大小
-  borderRadius: 'small' | 'medium' | 'large'; // 圆角大小
-  shadowIntensity: 'light' | 'medium' | 'strong'; // 阴影强度
-  showUnderlyingPrinciple: boolean; // 是否显示底层原理板块
-}
-```
-
-#### 4.3.2 主题适配
-- 支持深色主题、浅色主题和拟态主题
-- 自动适应当前主题样式
-- 支持自定义主题配置
-
-## 5. 最佳实践
-
-### 5.1 帮助按钮放置位置
-- 通常放置在模块标题栏的右上角
-- 对于卡片式设计，放置在卡片的右上角
-- 确保与其他操作按钮区分开
-- 保持一致的位置，让用户形成习惯
-
-### 5.2 帮助内容编写
-- **简洁明了**：使用简短的段落和列表，避免冗长的文字
-- **结构化**：分模块组织内容，使用清晰的标题
-- **实用导向**：重点介绍实际使用方法和常见问题
-- **更新及时**：定期更新帮助内容，保持与产品功能同步
-
-### 5.3 性能优化
-- 延迟加载帮助内容（如果内容较大）
-- 使用 React.memo 优化组件性能
-- 避免不必要的重新渲染
-
-## 6. 常见问题和解决方案
-
-### 6.1 帮助按钮不显示
-- 检查 `settings.guideCardConfig` 是否为 true
-- 确保帮助按钮组件被正确导入和使用
-- 检查主题样式是否导致按钮不可见
-
-### 6.2 指南卡片显示异常
-- 检查 `activeHelp` 状态是否正确设置
-- 确保 `helpContent` 中包含对应的帮助ID
-- 检查卡片样式是否与主题冲突
-
-### 6.3 交互不响应
-- 检查点击事件处理函数是否正确绑定
-- 确保组件层级正确，没有被其他元素遮挡
-- 检查键盘事件是否正确处理
-
-## 7. 版本更新记录
-
-| 版本 | 更新内容 | 更新时间 |
-|------|----------|----------|
-| 1.0  | 初始版本 | 2026-01-08 |
-
-## 8. 相关资源
-
-- [lucide-react 图标库](https://lucide.dev/icons/) 
-- [React 组件设计最佳实践](https://reactjs.org/docs/design-principles.html)
-- [无障碍设计指南](https://www.w3.org/WAI/ARIA/apg/)
-
-## 9. 设计示例
-
-### 9.1 帮助按钮示例
-
-#### 9.1.1 默认样式
+2. 添加帮助按钮
 ```tsx
-<HelpTooltip helpId="example" onHelpClick={setActiveHelp}>
-  <HelpCircle size={16} className="text-zinc-500 hover:text-white" />
-</HelpTooltip>
+// 在组件中添加帮助按钮
+<HelpTooltip helpId="moduleName" onHelpClick={setActiveHelp} />
+
+// 或直接使用HelpCircle图标
+<button onClick={() => setActiveHelp('moduleName')} className="transition-colors">
+  <HelpCircle size={16} className="text-zinc-500 hover:text-white transition-colors" />
+</button>
 ```
 
-#### 9.1.2 小尺寸样式
+3. 添加帮助内容卡片
 ```tsx
-<HelpTooltip helpId="example" onHelpClick={setActiveHelp} className="p-0.5">
-  <HelpCircle size={10} className="text-blue-500" />
-</HelpTooltip>
-```
-
-#### 9.1.3 大尺寸样式
-```tsx
-<HelpTooltip helpId="example" onHelpClick={setActiveHelp} className="p-1">
-  <HelpCircle size={20} className="text-green-500" />
-</HelpTooltip>
-```
-
-### 9.2 指南卡片示例
-
-```tsx
+// 在组件末尾添加帮助内容卡片
 <GlobalGuideCard
   activeHelp={activeHelp}
   helpContent={helpContent}
@@ -252,7 +78,7 @@ interface GuideCardConfig {
   cardBg={cardBg}
   textMain={textMain}
   textSub={textSub}
-  config={{
+  config={settings.guideCardConfig || {
     fontSize: 'medium',
     borderRadius: 'medium',
     shadowIntensity: 'medium',
@@ -261,8 +87,92 @@ interface GuideCardConfig {
 />
 ```
 
-## 10. 结论
+### 4.2 添加新模块的帮助内容
 
-统一的帮助按钮设计是提高产品易用性和用户体验的重要手段。通过遵循本设计指南，可以确保所有帮助按钮保持一致的视觉设计和交互行为，为用户提供清晰、易用的帮助体验。
+1. 在`HelpContent.tsx`中添加新模块的帮助内容
+```tsx
+// 在helpContent对象中添加新模块的帮助内容
+newModule: {
+  title: '新模块名称',
+  icon: <IconComponent size={24} className="text-color" />,
+  productIntro: '产品介绍',
+  underlyingPrinciple: '底层原理',
+  coreRules: '核心规则',
+  usageMethods: '使用方法',
+  updateTime: '2026-01-08'
+}
+```
 
-设计指南将持续更新，以适应产品的发展和用户需求的变化。
+## 5. 帮助内容撰写规范
+
+### 5.1 内容结构
+- **产品介绍**：简要介绍模块的功能和作用
+- **底层原理**：模块的设计思路和技术实现
+- **核心规则**：模块的核心规则和约束
+- **使用方法**：详细的使用步骤和操作指南
+
+### 5.2 语言要求
+- 语言简洁明了，避免使用复杂术语
+- 使用第二人称"您"，语气友好
+- 结构清晰，使用小标题和列表
+- 重点内容突出，使用加粗或其他强调方式
+
+## 6. 组件 API 文档
+
+### 6.1 HelpTooltip 组件
+
+| 属性 | 类型 | 描述 |
+|------|------|------|
+| helpId | string | 帮助内容的唯一标识符 |
+| onHelpClick | (helpId: string) => void | 点击帮助按钮时触发的回调函数 |
+| children | React.ReactNode | 自定义帮助按钮内容 |
+| className | string | 自定义样式类 |
+
+### 6.2 GlobalGuideCard 组件
+
+| 属性 | 类型 | 描述 |
+|------|------|------|
+| activeHelp | string  null | 当前激活的帮助ID |
+| helpContent | Record<string, HelpContentItem> | 帮助内容数据 |
+| onClose | () => void | 关闭帮助卡片时触发的回调函数 |
+| cardBg | string | 卡片背景样式类 |
+| textMain | string | 主要文本样式类 |
+| textSub | string | 次要文本样式类 |
+| config | GuideCardConfig | 卡片配置 |
+
+### 6.3 GuideCardConfig 配置
+
+| 属性 | 类型 | 描述 |
+|------|------|------|
+| fontSize | 'small'  'medium'  'large' | 字体大小 |
+| borderRadius | 'small'  'medium'  'large' | 圆角大小 |
+| shadowIntensity | 'light'  'medium'  'strong' | 阴影强度 |
+| showUnderlyingPrinciple | boolean | 是否显示底层原理板块 |
+
+## 7. 最佳实践
+
+1. **统一使用 HelpTooltip 组件**：所有模块的帮助按钮都应使用统一的`HelpTooltip`组件
+2. **帮助内容及时更新**：当模块功能更新时，及时更新对应的帮助内容
+3. **保持帮助内容简洁**：帮助内容应简洁明了，避免过长的文本
+4. **定期检查帮助功能**：定期检查所有模块的帮助功能是否正常工作
+
+## 8. 故障排除
+
+1. **帮助按钮点击后无反应**：检查是否正确导入了`GlobalGuideCard`组件，并且`activeHelp`状态是否正确设置
+2. **帮助卡片样式异常**：检查是否正确传递了`cardBg`、`textMain`和`textSub`样式类
+3. **帮助内容显示错误**：检查`helpId`是否与`helpContent`对象中的键匹配
+
+## 9. 版本历史
+
+| 版本 | 更新时间 | 更新内容 |
+|------|----------|----------|
+| 1.0 | 2026-01-08 | 初始版本，建立帮助按钮设计规范 |
+
+## 10. 维护人员
+
+- 维护团队：AI编程
+- 联系方式：通过项目管理系统联系
+
+---
+
+**版权所有 © 2026 AI编程 人生游戏管理系统**
