--- a/番茄钟系统详细介绍.md
+++ b/番茄钟系统详细介绍.md
@@ -52,11 +52,41 @@
 
 #### 3.2.1 沉浸式模式
 
-- 全屏沉浸式体验
-- 3D森林场景
-- 专注完成后种植树木或动物
-- 支持背景音乐
-- 减少外界干扰
+#### 3.2.1.1 全屏沉浸式体验
+- 全屏显示，减少外界干扰
+- 深色半透明背景，聚焦核心内容
+- 响应式设计，适配不同屏幕尺寸
+
+#### 3.2.1.2 3D森林场景
+- 基于Three.js实现的3D渲染
+- 动态森林环境，包含树木、草地、天空等元素
+- 支持不同时间段的场景变化（早晨、中午、傍晚）
+- 流畅的动画效果，提升沉浸感
+
+#### 3.2.1.3 植物与动物系统
+- 专注完成后可选择种植树木或放置动物
+- 多种树木和动物选项
+- 支持双击修改总植物数量（默认6个）
+- 植物和动物随时间生长和变化
+- 动态场景效果，如树叶飘动、动物移动
+
+#### 3.2.1.4 背景音乐
+- 统一的音乐管理系统
+- 支持多种音乐选项：迷雾森林、阿尔法波、希塔波、贝塔波、海浪声、雨声、夏夜虫鸣、白噪音、粉红噪音、布朗噪音、咖啡馆环境、壁炉声等
+- 音乐状态在外部番茄钟和沉浸式番茄钟之间同步
+- 支持静音模式
+
+#### 3.2.1.5 交互控制
+- 简洁的控制界面
+- 开始/暂停/重置功能
+- 音乐菜单交互（点击-based，而非hover-based）
+- 退出全屏功能
+
+#### 3.2.1.6 帮助系统
+- 内置帮助按钮和指南卡片
+- 详细的使用说明
+- 统一的帮助按钮设计
+- 清晰的交互指引
 
 #### 3.2.2 背景音乐
 
@@ -94,38 +124,150 @@
 
 #### 4.2.1 TomatoTimer.tsx
 
-- 核心番茄钟组件
-- 专注计时功能
-- 预设时长选择
-- 音乐控制
-- 沉浸式模式切换
+- **功能定位**: 核心番茄钟组件，外部番茄钟的入口
+- **核心功能**:
+  - 专注计时功能，支持开始/暂停/重置
+  - 预设时长选择（25分钟、45分钟、60分钟）
+  - 自定义时长设置
+  - 音乐控制
+  - 沉浸式模式切换
+  - 状态可视化显示
+  - 进度条实时更新
+- **技术实现**:
+  - React + TypeScript 组件
+  - 使用自定义 Hooks 管理状态
+  - Tailwind CSS 样式
+  - 响应式设计
 
 #### 4.2.2 ImmersivePomodoro.tsx
 
-- 沉浸式番茄钟组件
-- iframe 封装
-- 3D 场景渲染
-- 与外部状态同步
+- **功能定位**: 沉浸式番茄钟组件，用于加载和管理沉浸式体验
+- **核心功能**:
+  - iframe 封装，隔离沉浸式体验
+  - 与外部番茄钟状态同步
+  - 错误处理和异常情况处理
+  - 类型安全的通信机制
+  - 动态 iframe 加载和卸载
+- **技术实现**:
+  - React + TypeScript 组件
+  - postMessage API 实现双向通信
+  - URL 参数传递初始状态
+  - 类型安全的消息传递
+  - 优化的 iframe 加载策略
 
 #### 4.2.3 immersive-pomodoro.html
 
-- 独立的沉浸式体验页面
-- 3D 渲染逻辑
-- 背景音乐管理
-- 交互控制
+- **功能定位**: 独立的沉浸式体验页面，包含完整的 3D 渲染和交互逻辑
+- **核心功能**:
+  - 3D 场景渲染（Three.js）
+  - 专注计时功能
+  - 背景音乐管理
+  - 植物与动物系统
+  - 交互控制
+  - 帮助系统
+- **技术实现**:
+  - 纯 HTML/CSS/JavaScript 实现，独立运行
+  - Three.js 用于 3D 渲染
+  - Web Audio API 用于音频管理
+  - 响应式设计
+  - 模块化代码结构
+
+#### 4.2.4 HelpSystem 组件
+
+- **功能定位**: 统一的帮助系统，为番茄钟提供帮助支持
+- **核心组件**:
+  - HelpTooltip: 标准化的帮助按钮组件
+  - HelpContent: 帮助内容管理
+  - GlobalGuideCard: 统一的指南卡片组件
+- **技术实现**:
+  - React + TypeScript 组件
+  - 支持主题适配
+  - 可配置的指南卡片样式
+  - 统一的帮助内容结构
 
 ### 4.3 状态管理
 
-- 使用自定义 Hooks 管理番茄钟状态
-- 支持跨组件状态共享
-- 实时同步外部状态
-- 支持本地存储
+#### 4.3.1 外部番茄钟状态管理
+
+- **核心状态**:
+  - 当前时间（秒）
+  - 总时长（秒）
+  - 状态（开始/暂停/重置）
+  - 音乐状态（当前音乐ID、是否静音）
+  - 主题设置
+
+- **技术实现**:
+  - 使用自定义 Hooks 管理状态
+  - 支持跨组件状态共享
+  - 实时同步外部状态
+  - 支持本地存储
+  - 状态变更时自动更新 UI
+
+#### 4.3.2 沉浸式番茄钟状态管理
+
+- **核心状态**:
+  - 继承外部番茄钟的所有状态
+  - 3D场景状态
+  - 植物和动物状态
+  - 音乐播放状态
+  - 交互界面状态
+
+- **技术实现**:
+  - 独立的状态管理系统
+  - 与外部状态实时同步
+  - 本地状态缓存
+  - 状态变更时触发相应的 UI 更新和动画效果
 
 ### 4.4 通信机制
 
-- postMessage API 实现 iframe 与父窗口通信
-- URL 参数传递初始状态
-- 事件监听机制
+#### 4.4.1 双向通信架构
+
+- **通信模式**: 外部番茄钟 ↔ ImmersivePomodoro 组件 ↔ iframe 内部
+- **通信协议**: 基于 postMessage API 的自定义消息格式
+- **类型安全**: 使用 TypeScript 类型定义确保消息传递的类型安全
+- **错误处理**: 完善的错误处理机制，确保通信稳定可靠
+
+#### 4.4.2 消息类型
+
+- **初始化消息**: 传递初始状态，如当前时间、总时长、状态、音乐设置等
+- **状态更新消息**: 实时同步状态变更，如时间更新、状态切换、音乐变更等
+- **控制命令**: 发送控制指令，如开始、暂停、重置等
+- **音乐控制消息**: 控制音乐播放、切换、静音等
+- **错误消息**: 传递错误信息，用于调试和错误处理
+
+#### 4.4.3 技术实现细节
+
+- **postMessage API**: 实现跨域通信
+- **URL 参数**: 传递初始状态，确保 iframe 加载时状态一致
+- **事件监听机制**: 监听和处理各种事件
+- **类型安全**: 使用 TypeScript 类型定义确保消息传递的类型安全
+- **优化策略**: 合并频繁的状态更新，减少通信开销
+- **错误处理**: 处理通信失败、超时等异常情况
+
+### 4.5 3D 渲染技术
+
+#### 4.5.1 Three.js 架构
+
+- **场景管理**: 包含场景、相机、渲染器
+- **模型加载**: 支持多种模型格式
+- **材质和纹理**: 高质量的材质和纹理效果
+- **动画系统**: 流畅的动画效果
+- **灯光和阴影**: 真实的光照效果
+
+#### 4.5.2 性能优化
+
+- **模型优化**: 低多边形模型，减少渲染负担
+- **纹理压缩**: 使用压缩纹理，减少内存占用
+- **渲染优化**: 合理的渲染顺序和剔除策略
+- **动画优化**: 使用高效的动画系统
+- **内存管理**: 及时释放不再使用的资源
+
+#### 4.5.3 浏览器兼容性
+
+- 支持现代浏览器
+- 优雅降级处理
+- 错误捕获和处理
+- 性能检测和优化
 
 ## 5. 使用指南
 
