修复拟态深色主题背景颜色不一致问题

--- a/docs/思维中心设计方案.md
+++ b/docs/思维中心设计方案.md
@@ -129,7 +129,7 @@
 | 普通亮色 | `#f8fafc` | `#ffffff` | `#0f172a` | `#64748b` | `#3b82f6` |
 | 普通暗色 | `#0f172a` | `#1e293b` | `#f1f5f9` | `#94a3b8` | `#3b82f6` |
 | 拟态亮色 | `#e0e5ec` | `#e0e5ec` | `#0f172a` | `#64748b` | `#3b82f6` |
-| 拟态暗色 | `#2a2d36` | `#1e1e2e` | `#f1f5f9` | `#94a3b8` | `#3b82f6` |
+| 拟态暗色 | `#1e1e2e` | `#1e1e2e` | `#f1f5f9` | `#94a3b8` | `#3b82f6` |
 
 #### 4.1.2 功能色彩
 
