feat: 完善任务管理系统，添加时间盒子功能，修复优先级显示问题

--- a/设计参考和解析文档/音频管理指南.md
+++ b/设计参考和解析文档/音频管理指南.md
@@ -1,10 +1,10 @@
-# 番茄钟系统音频管理指南
+# 音频管理指南
 
 ## 1. 音频文件位置与结构
 
 ### 1.1 音频文件存放位置
 
-番茄钟系统的音频文件存放在 `public/audio/` 目录下，具体结构如下：
+系统的音频文件存放在 `public/audio/` 目录下，具体结构如下：
 
 ```
 public/
@@ -12,6 +12,7 @@ public/
     ├── bgm/                 # 通用背景音乐
     ├── pomodoro/            # 番茄钟音效
     │   └── bgm/             # 番茄钟背景音乐 (您存放100多个本地背景音乐的地方)
+    ├── subbgm/              # SUBBGM背景音乐
     ├── battle/              # 战斗音效
     ├── dice/                # 骰子音效
     ├── sfx/                 # 通用音效
@@ -27,6 +28,16 @@ public/audio/pomodoro/bgm/
 ```
 
 这是专门为番茄钟功能设计的背景音乐目录，系统会自动扫描此目录下的所有音频文件并在番茄钟界面中显示。
+
+### 1.3 SUBBGM背景音乐目录
+
+SUBBGM（潜意识背景音乐）文件应该存放在以下目录：
+
+```
+public/audio/subbgm/
+```
+
+这是专门为自我显化(对齐)组件中的SUBBGM功能设计的背景音乐目录，系统会在此目录中查找和管理SUBBGM文件。
 
 ## 2. 支持的音频格式
 
@@ -147,13 +158,47 @@ public/audio/pomodoro/bgm/
 - **文件命名**：建议使用描述性中文名称，如 `森林晨光.mp3`, `海浪声.mp3`
 - **说明**：这就是您存放100多个本地背景音乐的目录，每个文件名都会直接显示在番茄钟的音乐选择菜单中
 
-### 9.2 其他目录
+### 9.2 `/subbgm/` - SUBBGM背景音乐
+- **用途**：自我显化(对齐)组件中的潜意识背景音乐
+- **使用场景**：用户进行自我显化、肯定语练习时的背景音乐
+- **文件命名**：建议使用描述性中文名称，如 `潜意识增强.mp3`, `正面能量.mp3`
+- **说明**：SUBBGM文件会在自我显化(对齐)组件的SUB&KDY标签页中显示，用于配合肯定语练习
+
+### 9.3 其他目录
 - `/bgm/` - 系统通用背景音乐
 - `/pomodoro/` - 番茄钟提示音效（开始、结束、警告等）
 - `/battle/` - 战斗相关音效
 - `/dice/` - 骰子功能音效
 - `/sfx/` - 系统通用音效
 
+## 10. SUBBGM功能说明
+
+### 10.1 功能概述
+
+SUBBGM（潜意识背景音乐）功能是自我显化(对齐)组件中的一个重要模块，用于播放有助于潜意识影响的背景音乐，配合肯定语练习，帮助用户实现自我提升和目标达成。
+
+### 10.2 核心功能
+
+- **音频管理**：支持添加、编辑、删除SUBBGM音频
+- **播放控制**：支持播放、暂停、音量调节
+- **与肯定语集成**：与肯定语功能无缝集成，营造沉浸式体验
+- **数据持久化**：所有设置会自动保存到本地存储
+
+### 10.3 使用方法
+
+1. 在自我显化(对齐)组件中点击"SUB&KDY"标签
+2. 在SUBBGM模块中选择或添加背景音乐
+3. 调整音量到合适水平
+4. 开始播放音乐，同时在肯定语模块中查看或添加肯定语
+5. 系统会自动保存您的设置，下次进入时保持当前状态
+
+### 10.4 最佳实践
+
+- **选择合适的音乐**：建议选择轻柔、舒缓的背景音乐，避免过于激昂或有歌词的音乐
+- **音量设置**：将音量调至较低水平，使其成为背景音，不干扰肯定语的阅读和内化
+- **与肯定语配合**：选择与肯定语主题相符的背景音乐，增强潜意识影响效果
+- **定期更新**：根据不同的目标和阶段，适时更新SUBBGM音乐库
+
 ---
 
-**注意**：所有音频文件必须放置在正确的目录中才能被系统正确识别和使用。对于番茄钟背景音乐，务必放在 `public/audio/pomodoro/bgm/` 目录下，文件名将直接显示在番茄钟的音乐选择界面中。
+**注意**：所有音频文件必须放置在正确的目录中才能被系统正确识别和使用。对于番茄钟背景音乐，务必放在 `public/audio/pomodoro/bgm/` 目录下；对于SUBBGM背景音乐，务必放在 `public/audio/subbgm/` 目录下。
