feat: 优化设置中心圆角大小，与作战中心保持一致；添加百度网盘授权功能和回调页面；修复备份管理器导入问题；更新帮助内容

--- a/docs/更新日志.md
+++ b/docs/更新日志.md
@@ -2,6 +2,23 @@
 
 ## 2026年2月7日更新
 
+### 备份系统更新
+
+1. **百度网盘备份功能**
+   - 添加了百度网盘备份功能到设置中心
+   - 实现了百度网盘授权、上传备份和下载恢复功能
+   - 支持个人开发者完全免费使用，利用自己的网盘空间（普通用户2TB+）
+   - API本身不收费、不扣钱，仅限制单文件大小和调用频率，个人备份完全够用
+
+2. **数据备份完整性**
+   - 添加了'audioPlayStatistics'到关键数据列表中，确保背景音乐收藏数据也能被正确备份
+   - 确保所有数据类型都能被正确备份，包括背景音乐收藏、经验金币、任务完成数、勋章、商品和音效设置
+
+3. **备份功能优化**
+   - 优化了备份管理器初始化过程，添加了百度网盘备份管理器的支持
+   - 增强了备份恢复功能，支持从百度网盘恢复备份
+   - 改进了备份错误处理，确保备份过程更加稳定
+
 ### 音频系统修复
 
 1. **番茄钟背景音乐重复问题**
@@ -17,12 +34,17 @@
 3. **无法选中背景音乐问题**
    - 确保选择器和音效管理器使用相同的ID格式
    - 优化了播放逻辑，确保能够正确选中和播放背景音乐
-   - 现在点击背景音乐可以正常选中并播放
+   - 现在点击背景音乐可以正常选中和播放
 
-4. **静音功能修复**
+4. **静音功能无反应问题**
    - 修复了点击静音按钮没有反应的问题
    - 添加了stopBackgroundMusic()方法，确保点击静音时所有音频都能停止
    - 现在点击静音按钮时，所有正在播放的音频都会停止
+
+5. **音频加载优化**
+   - 优化了音频初始化过程，改为异步加载，避免阻塞页面加载
+   - 添加了音频加载错误处理，确保即使音频文件加载失败也不会导致页面白屏
+   - 改进了音频文件路径处理，确保在不同环境下都能正确加载音频文件
 
 ## 2026年2月更新
 
